Fixed z-index on suggest box popup

--- a/src/main/webapp/css/WebProtegeLookAndFeel.css
+++ b/src/main/webapp/css/WebProtegeLookAndFeel.css
@@ -149,6 +149,7 @@
     border: 1px solid rgba(0, 0, 0, .333);
     font-size: 12px;
     line-height: 15px;
+    z-index: 10;
 }
 
 .gwt-SuggestBoxPopup .item {
